fixed talkbacks flickering on hover

--- a/news-game/src/components/Talkback/Talkback.module.scss
+++ b/news-game/src/components/Talkback/Talkback.module.scss
@@ -58,6 +58,7 @@ $main: #aaa;
 			&:hover {
 				overflow-y: visible;
 				scale: 130%;
+				height: 140%;
 				translate: 0 -40%;
 				&.content-long {
 					max-height: 20rem;
